--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,12 @@ install:
   - pip install -q Django>=$DJANGO --use-mirrors
   - pip install -q simplejson --use-mirrors
   - pip install -q factory_boy --use-mirrors
+  - pip install -q coveralls
   - pip install -q . --use-mirrors
 script:
-  - python quicktest.py vkontakte_board
+  - coverage run --source=vkontakte_board quicktest.py vkontakte_board
+after_success:
+  - coveralls
 notifications:
   email:
     recipients:
