--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install -q coveralls --use-mirrors
   - pip install -q . --use-mirrors
 script:
-  - python quicktest.py vkontakte_groups
+  - python quicktest.py vkontakte_board
 after_success:
   - coveralls
 notifications:
