--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install -q coveralls --use-mirrors
   - pip install -q . --use-mirrors
 script:
-  - coverage run --omit='*migrations*' --source=vkontakte_board quicktest.py vkontakte_board
+  - coverage run --omit="*migrations*" --source=vkontakte_board quicktest.py vkontakte_board
 after_success:
   - coveralls
 notifications:
