--- a/.coveragerc
+++ b/.coveragerc
@@ -1,11 +1,13 @@
 [run]
 omit =
     *migrations*
+    *admin.py
 
 [report]
 exclude_lines =
-    pragma: no cover
     def __repr__
+    def __unicode__
+    def parse_args
+    pragma: no cover
     raise NotImplementedError
     if __name__ == .__main__.:
-    def parse_args
